--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.122 2004/01/31 08:20:56 jaco Exp $
+# $Id: hwdetect.in,v 1.123 2004/02/10 04:58:57 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -547,13 +547,13 @@ sub hwdetect_getmouse {
 			($probed_vendor, $probed_desc) = split(/\|/, $device->{description});
 		}
 	}
-	elsif ($probed_mouse->{device} =~ /psaux/) {
-		# http://lists.berlios.de/pipermail/minicd-scripts/2003-October/000229.html
-		unless ($probed_mouse->{XMOUSETYPE} =~ /GlidePoint/) {
-			$probed_mouse->{XMOUSETYPE} = 'auto'; # X will auto-detect the protocol
-			$probed_mouse->{nbuttons} = 4;        # get the ZAxisMapping right (needed for wheel)
-		}
-	}
+	#elsif ($probed_mouse->{device} =~ /psaux/) {
+	#	# http://lists.berlios.de/pipermail/minicd-scripts/2003-October/000229.html
+	#	unless ($probed_mouse->{XMOUSETYPE} =~ /GlidePoint/) {
+	#		$probed_mouse->{XMOUSETYPE} = $kernel26 ? 'ExplorerPS/2' : 'auto'; # X will auto-detect the protocol
+	#		$probed_mouse->{nbuttons} = 4;        # get the ZAxisMapping right (needed for wheel)
+	#	}
+	#}
 	hwdetect_loadmod('unknown', $probed_vendor, $probed_mouse->{type}." ".$probed_mouse->{name}." ".$probed_desc);
 	print_hash($probed_mouse) if ($debug);
 	$probed_mouse;
