--- a/mklivecd/src/halt.local.in
+++ b/mklivecd/src/halt.local.in
@@ -29,7 +29,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: halt.local.in,v 1.14 2004/01/21 08:36:23 jaco Exp $
+# $Id: halt.local.in,v 1.15 2004/02/25 06:48:59 jaco Exp $
 #
 
 export PATH=/initrd/bin:/initrd/usr/bin:/initrd/sbin:/initrd/usr/sbin:/bin:/usr/bin:/sbin:/usr/sbin
@@ -96,13 +96,12 @@ docmd() {
 	(eval "$CMD") 2>&1 >/dev/null && printok || printfail
 }
 
-# Copy the binaries we need
-docmd   "Copying halt and reboot binaries" \
-	"cp -f /sbin/halt /sbin/reboot /initrd/sbin"
+# Copy the binaries we need (Done in rc.sysinit now)
+#docmd   "Copying halt and reboot binaries" \
+#	"cp -f /sbin/halt /sbin/reboot /initrd/sbin"
 
 # move our /proc and /dev mounts and pivot (setting correct paths)
 docmd   "Performing initrd pivot" \
-	"mkdir -p /initrd/ramfs" \
 	"/initrd/sbin/pivot_root /initrd /initrd/ramfs" \
 	"umount /ramfs/proc"
 
