--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -20,7 +20,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.110 2004/02/25 06:49:00 jaco Exp $
+# $Id: mklivecd.in,v 1.111 2004/04/19 15:47:44 tom_kelly33 Exp $
 #
 
 use strict;
@@ -930,7 +930,7 @@ MAIN: {
 	create_compressed();
 	create_isolinux();
 	create_finaliso();
-	create_md5();
+#	create_md5();
 
 	cleanup();
 
